--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,13 +11,11 @@ tasks:
       source venv/bin/activate
       pip install --upgrade pip
       pip install kedro
-
-# cd pipeline/
-# pip install -r requirements.txt
-# pip install kedro-docker
-# pip install kedro-kubeflow
-# kedro docker init
-# kedro docker build
+      cd pipeline/
+      pip install -r requirements.txt
+      pip install kedro-docker
+      kedro docker init
+      kedro docker build
 
 # jetbrains:
 #   pycharm:
