--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       cd pipeline/
       pip install -r requirements.txt
       pip install kedro-docker
+      pip install pyarrow fastparquet openpyxl
       kedro docker init
       kedro docker build
 
