--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,10 +14,10 @@ tasks:
       kedro new --starter=spaceflights-pandas-viz --name=pipeline
       cd pipeline/
       pip install -r requirements.txt
-      pip install pyarrow fastparquet openpyxl
+
       jupyter lab --ServerApp.allow_remote_access=True --ServerApp.allow_origin='*' --ServerApp.ip='0.0.0.0' --port=8888 --ServerApp.token='' --ServerApp.disable_check_xsrf=True
 
 # pip uninstall s3fs
 
-ports:
-  - port: 8888  # Default Jupyter Notebook port
+#ports:
+#  - port: 8888  # Default Jupyter Notebook port
