--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,8 +15,7 @@ tasks:
       cd pipeline/
       pip install -r requirements.txt
       pip install pyarrow fastparquet openpyxl
-
-# kedro jupyter lab --ServerApp.allow_remote_access=True --ServerApp.allow_origin='*' --ServerApp.ip='0.0.0.0' --port=8888 --ServerApp.token='' --ServerApp.disable_check_xsrf=True
+      git clone https://github.com/AdamPrzychodniPrivate/notebook-templates.git notebooks/
 
 ports:
  - port: 8888  # Default Jupyter Notebook port
