--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -52,8 +52,15 @@ tasks:
       echo "Running regular startup commands"
       # Put your regular startup commands here
 
+      sudo apt-get update
+      sudo apt-get install tree
+      virtualenv venv
       source venv/bin/activate
+      pip install --upgrade pip
+      pip install kedro
       cd pipeline/
+      pip install -r requirements.txt
+      pip install pyarrow fastparquet openpyxl
 
 ports:
  - port: 8888  # Default Jupyter Notebook port
