--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -32,8 +32,6 @@ tasks:
       if [ ! -d "pipeline" ]; then
         echo "Running first-time setup commands"
 
-        sudo apt-get update
-        sudo apt-get install tree
         virtualenv venv
         source venv/bin/activate
         pip install --upgrade pip
@@ -43,8 +41,9 @@ tasks:
         pip install -r requirements.txt
         pip install pyarrow fastparquet openpyxl
         cd notebooks/
-        git clone https://github.com/AdamPrzychodniPrivate/notebook-templates.git
+        curl -s https://api.github.com/repos/AdamPrzychodniPrivate/notebook-templates/contents/ | jq -r '.[] | .download_url' | xargs -n 1 -I {} curl -O {}
         cd ..
+        deactivate
 
       fi
     command: |
